change to NBT-Bridge